Fixed also in dark mode

--- a/client/src/app/site/pages/meetings/pages/motions/pages/motion-detail/modules/motion-change-recommendation-dialog/components/motion-content-change-recommendation-dialog/motion-content-change-recommendation-dialog.component.scss
+++ b/client/src/app/site/pages/meetings/pages/motions/pages/motion-detail/modules/motion-change-recommendation-dialog/components/motion-content-change-recommendation-dialog/motion-content-change-recommendation-dialog.component.scss
@@ -1,6 +1,9 @@
 .motion-content {
     padding: 8px 0;
-    color: rgba(0, 0, 0, 0.87);
+}
+
+mat-dialog-content {
+    color: inherit;
 }
 
 .small-icon {
